Updated to version 0.3.3 (compatible with Intake24)